# research-assistant

./: .dockerignore  .env.example  .gitignore  .vercelignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  index.py  pyproject.toml  render.yaml  requirements.txt  settings.py  vercel.json
.github/workflows/: deploy-fly.yml  docs.yml  playwright.yml  pytest.yml
agent/: __init__.py  graph.py  llm.py  state.py  tools.py  truncate.py
api/: __init__.py  constants.py  main.py  redis_utils.py  schemas.py  worker.py
bot/: __init__.py  main.py
db/: __init__.py  crud.py  models.py  session.py
db/migrations/: env.py
db/migrations/versions/: 0001_initial.py
docs/api/: README.md  openapi.json
fly/api/: fly.toml
fly/redis/: Dockerfile  fly.toml
fly/worker/: fly.toml
mail/: __init__.py  client.py
memory/: __init__.py  episodic.py
scripts/: check_docs.py  deploy-fly.ps1  deploy-vercel-api.ps1  deploy-vercel-app.ps1  deploy-vercel.ps1  enqueue_job.py  export_openapi.py  install-flyctl.ps1  memory_demo.py  update-docs.ps1  update_docs.py
tests/: conftest.py  test_api.py  test_failures.py  test_mail.py  test_memory.py  test_queue.py
web/: .env.local.example  .gitignore  .vercelignore  README.md  package-lock.json  package.json  playwright.config.ts
web/e2e/: auth.spec.ts  errors.spec.ts  form.spec.ts  global.setup.ts  history.spec.ts  home.spec.ts  navigation.spec.ts  research.spec.ts  theme.spec.ts
web/e2e/helpers/: mock-api.ts
web/src/: proxy.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: event-timeline.tsx  (+5 more)
(+6 files in other folders)
